tests/integration/records/errors/quantified-constraint-incompatible/main.cx
fun g<Rec: {...: String}>(a: Rec) {
}

fun f<Rec: {...: Number}>(a: Rec) {
  g(a)
}

fun main() {}
